--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jwt-decode": "^3.1.2",
     "nodemon": "^2.0.20",
     "pg": "^8.9.0"
   }
