--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "node server.js"
   },
   "engines": {
-    "node": ">= 18"
+    "node": "18.14.0"
   },
   "name": "moneymates_backend",
   "version": "1.0.0",
